# ebi

./: .gitignore  LICENSE  README.md
Automated Test Procedures/: .gitignore
Automated Test Procedures/Workspace Generator/: requirements.txt
Automated Test Procedures/Workspace Generator/src/: TestGenerator.py
file-manager/: Cargo.toml  build.rs
file-manager/src/: main.rs  query.rs  rpc.rs  tag.rs  workspace.rs
file-manager/src/rpc/: ebi.proto
file-manager/src/services/: cache.rs  mod.rs  peer.rs  query.rs  rpc.rs
file-manager/src/shelf/: file.rs  mod.rs  node.rs  shelf.rs
