[package]
name = "file-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
fxhash = "0.2.1"
chrono = "0.4.40"
tokio = "1.44.1"
tower = "0.5.2"
#serde = { version = "1.0.218", features = ["derive"] }
peg = "0.8.5"
iroh = "0.34.1"
iroh-base = "0.34.1"
anyhow = "1.0.97"
rand = "0.8.5"
tonic = { version = "0.13", features = ["codegen", "prost"], default-features = false }
prost = "0.13"

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"], default-features = false }
